// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminNotificationsPageComponent should snap when notification edit form expanded for adding notification 1`] = `
<tm-admin-notifications-page
  NotificationEditFormMode={[Function Object]}
  currentNotificationEditFormMode="0"
  hasNotificationLoadingFailed="false"
  isNotificationEditFormExpanded={[Function Boolean]}
  isNotificationLoading="false"
  notificationEditFormModel={[Function Object]}
  notificationService={[Function NotificationService]}
  notificationsTableRowModels={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Notifications
  </h1><p>
    This page allows you to create and manage notifications which are shown to respective target users when they access TEAMMATES.
  </p><div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-notification"
    >
      <span>
        <i
          class="fas fa-plus"
        />
         Add New Notification
      </span>
    </button>
  </div><div
    class="margin-top-30px ng-trigger ng-trigger-collapseAnim ng-animating"
    style=""
  >
    <tm-notification-edit-form
      style=""
    >
      <div
        class="card card-plain"
      >
        <div
          class="close-header"
        >
          <button
            aria-label="Close"
            class="close"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <div
          class="card-body"
        >
          <div
            class="card border-primary margin-top-20px"
          >
            <div
              class="card-body"
            >
              <div
                class="row text-center"
              >
                <div
                  class="col-md-2 text-md-right font-weight-bold"
                >
                  <span
                    class="ngb-tooltip-class"
                    ngbtooltip="The indended recipients of this notification."
                  >
                    Target user group
                  </span>
                </div>
                <div
                  class="col-md-auto text-md-left"
                >
                  <select
                    class="form-control ng-untouched ng-pristine ng-valid"
                    id="targer-user"
                  >
                    <option
                      value="0: STUDENT"
                    >
                      Students
                    </option>
                    <option
                      value="1: INSTRUCTOR"
                    >
                      Instructors
                    </option>
                    <option
                      value="2: GENERAL"
                    >
                      General (for both students and instructors)
                    </option>
                  </select>
                </div>
              </div>
              <br />
              <div
                class="row text-center"
              >
                <div
                  class="col-md-2 text-md-right font-weight-bold"
                >
                  <span
                    class="ngb-tooltip-class"
                    ngbtooltip="Different styles correspond to different background colours at display."
                  >
                    Notification style
                  </span>
                </div>
                <div
                  class="col-md-auto text-md-left"
                >
                  <select
                    class="form-control ng-untouched ng-pristine ng-valid"
                    id="notification-style"
                  >
                    <option
                      class="bg-danger text-white"
                      value="0: DANGER"
                    >
                      Danger (red)
                    </option>
                    <option
                      class="bg-dark text-white"
                      value="1: DARK"
                    >
                      Dark
                    </option>
                    <option
                      class="bg-info text-white"
                      value="2: INFO"
                    >
                      Info (cyan)
                    </option>
                    <option
                      class="bg-light text-dark"
                      value="3: LIGHT"
                    >
                      Light
                    </option>
                    <option
                      class="bg-primary text-white"
                      value="4: PRIMARY"
                    >
                      Primary (blue)
                    </option>
                    <option
                      class="bg-secondary text-white"
                      value="5: SECONDARY"
                    >
                      Secondary (grey)
                    </option>
                    <option
                      class="bg-success text-white"
                      value="6: SUCCESS"
                    >
                      Success (green)
                    </option>
                    <option
                      class="bg-warning text-dark"
                      value="7: WARNING"
                    >
                      Warning (yellow)
                    </option>
                  </select>
                </div>
              </div>
              <br />
              <div
                class="row text-center"
              >
                <div
                  class="col-md-2 text-md-right font-weight-bold"
                >
                  <span
                    class="ngb-tooltip-class"
                    ngbtooltip="Enter the name of the notification e.g. Version Changelog 8.9.1."
                  >
                    Title
                  </span>
                </div>
                <div
                  class="col-md-10 text-md-left"
                >
                  <input
                    class="form-control ng-untouched ng-pristine ng-valid"
                    id="notification-title"
                    maxlength="80"
                    placeholder="e.g. Version Changelog 8.9.1"
                    type="text"
                  />
                  <div>
                     80 characters left 
                  </div>
                </div>
              </div>
              <br />
              <div
                class="row text-center"
              >
                <div
                  class="col-md-2 text-md-right font-weight-bold"
                >
                  <span
                    class="ngb-tooltip-class"
                    ngbtooltip="Message body of the notification."
                  >
                    Message content
                  </span>
                </div>
                <div
                  class="col-md-10 text-md-left"
                >
                  <tm-rich-text-editor
                    id="message"
                  >
                    <div
                      inviewport=""
                    >
                    </div>
                  </tm-rich-text-editor>
                </div>
              </div>
              <br />
            </div>
          </div>
          <div
            class="card border-primary margin-top-20px"
          >
            <div
              class="card-body"
            >
              <div
                class="row text-center"
              >
                <div
                  class="col-md-2 text-md-right font-weight-bold"
                >
                  <span
                    class="ngb-tooltip-class"
                    ngbtooltip="This timezone is deduced based on your system/browser's settings."
                  >
                    Timezone
                  </span>
                </div>
                <div
                  class="col-md-4 text-md-left"
                  id="submission-status"
                >
                   Asia/Singapore 
                </div>
              </div>
              <div
                class="row text-center margin-top-20px"
              >
                <div
                  class="col-md-6"
                >
                  <div
                    class="col-12 text-md-left"
                  >
                    <div>
                      <label
                        class="ngb-tooltip-class label-control font-weight-bold"
                        ngbtooltip="Users will be able to see the notification."
                      >
                         Notification start time 
                      </label>
                    </div>
                  </div>
                  <div
                    class="row text-center align-items-center"
                  >
                    <div
                      class="col-md-7 col-xs-center"
                      id="notification-start-date"
                    >
                      <tm-datepicker>
                        <div
                          class="input-group"
                        >
                          <input
                            class="form-control ng-untouched ng-pristine ng-valid"
                            ngbdatepicker=""
                            type="text"
                          />
                          <div
                            class="input-group-append"
                          >
                            <button
                              class="btn btn-light"
                              type="button"
                            >
                              <i
                                class="fas fa-calendar-alt"
                              />
                            </button>
                          </div>
                        </div>
                      </tm-datepicker>
                    </div>
                    <div
                      class="col-md-5"
                    >
                      <tm-timepicker
                        id="notification-start-time"
                      >
                        <select
                          class="form-control ng-untouched ng-pristine ng-valid"
                        >
                          <option
                            value="1: Object"
                          >
                             01:00H 
                          </option>
                          <option
                            value="2: Object"
                          >
                             02:00H 
                          </option>
                          <option
                            value="3: Object"
                          >
                             03:00H 
                          </option>
                          <option
                            value="4: Object"
                          >
                             04:00H 
                          </option>
                          <option
                            value="5: Object"
                          >
                             05:00H 
                          </option>
                          <option
                            value="6: Object"
                          >
                             06:00H 
                          </option>
                          <option
                            value="7: Object"
                          >
                             07:00H 
                          </option>
                          <option
                            value="8: Object"
                          >
                             08:00H 
                          </option>
                          <option
                            value="9: Object"
                          >
                             09:00H 
                          </option>
                          <option
                            value="10: Object"
                          >
                             10:00H 
                          </option>
                          <option
                            value="11: Object"
                          >
                             11:00H 
                          </option>
                          <option
                            value="12: Object"
                          >
                             12:00H 
                          </option>
                          <option
                            value="13: Object"
                          >
                             13:00H 
                          </option>
                          <option
                            value="14: Object"
                          >
                             14:00H 
                          </option>
                          <option
                            value="15: Object"
                          >
                             15:00H 
                          </option>
                          <option
                            value="16: Object"
                          >
                             16:00H 
                          </option>
                          <option
                            value="17: Object"
                          >
                             17:00H 
                          </option>
                          <option
                            value="18: Object"
                          >
                             18:00H 
                          </option>
                          <option
                            value="19: Object"
                          >
                             19:00H 
                          </option>
                          <option
                            value="20: Object"
                          >
                             20:00H 
                          </option>
                          <option
                            value="21: Object"
                          >
                             21:00H 
                          </option>
                          <option
                            value="22: Object"
                          >
                             22:00H 
                          </option>
                          <option
                            value="23: Object"
                          >
                             23:00H 
                          </option>
                          <option
                            value="0: Object"
                          >
                            23:59H
                          </option>
                        </select>
                      </tm-timepicker>
                    </div>
                  </div>
                </div>
                <div
                  class="col-md-6 border-left-gray"
                >
                  <div
                    class="row text-center"
                  >
                    <div
                      class="col-12 text-md-left ml-md-2"
                    >
                      <label
                        class="ngb-tooltip-class label-control font-weight-bold"
                        ngbtooltip="Notification will be hidden from users."
                      >
                         Notification end time 
                      </label>
                    </div>
                  </div>
                  <div
                    class="row align-items-center"
                  >
                    <div
                      class="col-md-7 col-xs-center"
                      id="notification-end-date"
                    >
                      <tm-datepicker>
                        <div
                          class="input-group"
                        >
                          <input
                            class="form-control ng-untouched ng-pristine ng-valid"
                            ngbdatepicker=""
                            type="text"
                          />
                          <div
                            class="input-group-append"
                          >
                            <button
                              class="btn btn-light"
                              type="button"
                            >
                              <i
                                class="fas fa-calendar-alt"
                              />
                            </button>
                          </div>
                        </div>
                      </tm-datepicker>
                    </div>
                    <div
                      class="col-md-5"
                    >
                      <tm-timepicker
                        id="notification-end-time"
                      >
                        <select
                          class="form-control ng-untouched ng-pristine ng-valid"
                        >
                          <option
                            value="1: Object"
                          >
                             01:00H 
                          </option>
                          <option
                            value="2: Object"
                          >
                             02:00H 
                          </option>
                          <option
                            value="3: Object"
                          >
                             03:00H 
                          </option>
                          <option
                            value="4: Object"
                          >
                             04:00H 
                          </option>
                          <option
                            value="5: Object"
                          >
                             05:00H 
                          </option>
                          <option
                            value="6: Object"
                          >
                             06:00H 
                          </option>
                          <option
                            value="7: Object"
                          >
                             07:00H 
                          </option>
                          <option
                            value="8: Object"
                          >
                             08:00H 
                          </option>
                          <option
                            value="9: Object"
                          >
                             09:00H 
                          </option>
                          <option
                            value="10: Object"
                          >
                             10:00H 
                          </option>
                          <option
                            value="11: Object"
                          >
                             11:00H 
                          </option>
                          <option
                            value="12: Object"
                          >
                             12:00H 
                          </option>
                          <option
                            value="13: Object"
                          >
                             13:00H 
                          </option>
                          <option
                            value="14: Object"
                          >
                             14:00H 
                          </option>
                          <option
                            value="15: Object"
                          >
                             15:00H 
                          </option>
                          <option
                            value="16: Object"
                          >
                             16:00H 
                          </option>
                          <option
                            value="17: Object"
                          >
                             17:00H 
                          </option>
                          <option
                            value="18: Object"
                          >
                             18:00H 
                          </option>
                          <option
                            value="19: Object"
                          >
                             19:00H 
                          </option>
                          <option
                            value="20: Object"
                          >
                             20:00H 
                          </option>
                          <option
                            value="21: Object"
                          >
                             21:00H 
                          </option>
                          <option
                            value="22: Object"
                          >
                             22:00H 
                          </option>
                          <option
                            value="23: Object"
                          >
                             23:00H 
                          </option>
                          <option
                            value="0: Object"
                          >
                            23:59H
                          </option>
                        </select>
                      </tm-timepicker>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="row margin-top-20px"
          >
            <div
              class="col-12 text-center"
            >
              <span
                class="loader"
              />
              <div>
                <button
                  class="btn btn-primary"
                  id="btn-create-notification"
                  type="button"
                >
                  Create Notification 
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </tm-notification-edit-form>
  </div><tm-loading-retry>
    <div
      class="margin-top-30px"
    >
      <div>
        <div
          class="alert alert-warning margin-top-30px"
          role="alert"
        >
           You have not created any notifications yet. Use the form above to create a notification. 
        </div>
      </div>
    </div>
    <br />
  </tm-loading-retry>
</tm-admin-notifications-page>
`;

exports[`AdminNotificationsPageComponent should snap when notification edit form expanded for editing existent notification 1`] = `
<tm-admin-notifications-page
  NotificationEditFormMode={[Function Object]}
  currentNotificationEditFormMode={[Function Number]}
  hasNotificationLoadingFailed="false"
  isNotificationEditFormExpanded={[Function Boolean]}
  isNotificationLoading="false"
  notificationEditFormModel={[Function Object]}
  notificationService={[Function NotificationService]}
  notificationsTableRowModels={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Notifications
  </h1><p>
    This page allows you to create and manage notifications which are shown to respective target users when they access TEAMMATES.
  </p><div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-notification"
    >
      <i
        class="fas fa-cog"
      />
       Edit Existing Notification
    </button>
  </div><div
    class="margin-top-30px ng-trigger ng-trigger-collapseAnim ng-animating"
    style=""
  >
    <tm-notification-edit-form
      style=""
    >
      <div
        class="card card-plain"
      >
        <div
          class="close-header"
        >
          <button
            aria-label="Close"
            class="close"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
        <div
          class="card-body"
        >
          <div
            class="card border-primary margin-top-20px"
          >
            <div
              class="card-body"
            >
              <div
                class="row text-center"
              >
                <div
                  class="col-md-2 text-md-right font-weight-bold"
                >
                  <span
                    class="ngb-tooltip-class"
                    ngbtooltip="The indended recipients of this notification."
                  >
                    Target user group
                  </span>
                </div>
                <div
                  class="col-md-auto text-md-left"
                >
                  <select
                    class="form-control ng-untouched ng-pristine ng-valid"
                    id="targer-user"
                  >
                    <option
                      value="0: STUDENT"
                    >
                      Students
                    </option>
                    <option
                      value="1: INSTRUCTOR"
                    >
                      Instructors
                    </option>
                    <option
                      value="2: GENERAL"
                    >
                      General (for both students and instructors)
                    </option>
                  </select>
                </div>
              </div>
              <br />
              <div
                class="row text-center"
              >
                <div
                  class="col-md-2 text-md-right font-weight-bold"
                >
                  <span
                    class="ngb-tooltip-class"
                    ngbtooltip="Different styles correspond to different background colours at display."
                  >
                    Notification style
                  </span>
                </div>
                <div
                  class="col-md-auto text-md-left"
                >
                  <select
                    class="form-control ng-untouched ng-pristine ng-valid"
                    id="notification-style"
                  >
                    <option
                      class="bg-danger text-white"
                      value="0: DANGER"
                    >
                      Danger (red)
                    </option>
                    <option
                      class="bg-dark text-white"
                      value="1: DARK"
                    >
                      Dark
                    </option>
                    <option
                      class="bg-info text-white"
                      value="2: INFO"
                    >
                      Info (cyan)
                    </option>
                    <option
                      class="bg-light text-dark"
                      value="3: LIGHT"
                    >
                      Light
                    </option>
                    <option
                      class="bg-primary text-white"
                      value="4: PRIMARY"
                    >
                      Primary (blue)
                    </option>
                    <option
                      class="bg-secondary text-white"
                      value="5: SECONDARY"
                    >
                      Secondary (grey)
                    </option>
                    <option
                      class="bg-success text-white"
                      value="6: SUCCESS"
                    >
                      Success (green)
                    </option>
                    <option
                      class="bg-warning text-dark"
                      value="7: WARNING"
                    >
                      Warning (yellow)
                    </option>
                  </select>
                </div>
              </div>
              <br />
              <div
                class="row text-center"
              >
                <div
                  class="col-md-2 text-md-right font-weight-bold"
                >
                  <span
                    class="ngb-tooltip-class"
                    ngbtooltip="Enter the name of the notification e.g. Version Changelog 8.9.1."
                  >
                    Title
                  </span>
                </div>
                <div
                  class="col-md-10 text-md-left"
                >
                  <input
                    class="form-control ng-untouched ng-pristine ng-valid"
                    id="notification-title"
                    maxlength="80"
                    placeholder="e.g. Version Changelog 8.9.1"
                    type="text"
                  />
                  <div>
                     67 characters left 
                  </div>
                </div>
              </div>
              <br />
              <div
                class="row text-center"
              >
                <div
                  class="col-md-2 text-md-right font-weight-bold"
                >
                  <span
                    class="ngb-tooltip-class"
                    ngbtooltip="Message body of the notification."
                  >
                    Message content
                  </span>
                </div>
                <div
                  class="col-md-10 text-md-left"
                >
                  <tm-rich-text-editor
                    id="message"
                  >
                    <div
                      inviewport=""
                    >
                    </div>
                  </tm-rich-text-editor>
                </div>
              </div>
              <br />
              <div
                class="row text-center"
              >
                <div
                  class="col-md-2 text-md-right font-weight-bold"
                >
                   Shown Status 
                </div>
                <div
                  class="col-md-4 text-md-left"
                  id="submission-status"
                >
                   No 
                </div>
              </div>
            </div>
          </div>
          <div
            class="card border-primary margin-top-20px"
          >
            <div
              class="card-body"
            >
              <div
                class="row text-center"
              >
                <div
                  class="col-md-2 text-md-right font-weight-bold"
                >
                  <span
                    class="ngb-tooltip-class"
                    ngbtooltip="This timezone is deduced based on your system/browser's settings."
                  >
                    Timezone
                  </span>
                </div>
                <div
                  class="col-md-4 text-md-left"
                  id="submission-status"
                >
                   Asia/Singapore 
                </div>
              </div>
              <div
                class="row text-center margin-top-20px"
              >
                <div
                  class="col-md-6"
                >
                  <div
                    class="col-12 text-md-left"
                  >
                    <div>
                      <label
                        class="ngb-tooltip-class label-control font-weight-bold"
                        ngbtooltip="Users will be able to see the notification."
                      >
                         Notification start time 
                      </label>
                    </div>
                  </div>
                  <div
                    class="row text-center align-items-center"
                  >
                    <div
                      class="col-md-7 col-xs-center"
                      id="notification-start-date"
                    >
                      <tm-datepicker>
                        <div
                          class="input-group"
                        >
                          <input
                            class="form-control ng-untouched ng-pristine ng-valid"
                            ngbdatepicker=""
                            type="text"
                          />
                          <div
                            class="input-group-append"
                          >
                            <button
                              class="btn btn-light"
                              type="button"
                            >
                              <i
                                class="fas fa-calendar-alt"
                              />
                            </button>
                          </div>
                        </div>
                      </tm-datepicker>
                    </div>
                    <div
                      class="col-md-5"
                    >
                      <tm-timepicker
                        id="notification-start-time"
                      >
                        <select
                          class="form-control ng-untouched ng-pristine ng-valid"
                        >
                          <option
                            value="1: Object"
                          >
                             01:00H 
                          </option>
                          <option
                            value="2: Object"
                          >
                             02:00H 
                          </option>
                          <option
                            value="3: Object"
                          >
                             03:00H 
                          </option>
                          <option
                            value="4: Object"
                          >
                             04:00H 
                          </option>
                          <option
                            value="5: Object"
                          >
                             05:00H 
                          </option>
                          <option
                            value="6: Object"
                          >
                             06:00H 
                          </option>
                          <option
                            value="7: Object"
                          >
                             07:00H 
                          </option>
                          <option
                            value="8: Object"
                          >
                             08:00H 
                          </option>
                          <option
                            value="9: Object"
                          >
                             09:00H 
                          </option>
                          <option
                            value="10: Object"
                          >
                             10:00H 
                          </option>
                          <option
                            value="11: Object"
                          >
                             11:00H 
                          </option>
                          <option
                            value="12: Object"
                          >
                             12:00H 
                          </option>
                          <option
                            value="13: Object"
                          >
                             13:00H 
                          </option>
                          <option
                            value="14: Object"
                          >
                             14:00H 
                          </option>
                          <option
                            value="15: Object"
                          >
                             15:00H 
                          </option>
                          <option
                            value="16: Object"
                          >
                             16:00H 
                          </option>
                          <option
                            value="17: Object"
                          >
                             17:00H 
                          </option>
                          <option
                            value="18: Object"
                          >
                             18:00H 
                          </option>
                          <option
                            value="19: Object"
                          >
                             19:00H 
                          </option>
                          <option
                            value="20: Object"
                          >
                             20:00H 
                          </option>
                          <option
                            value="21: Object"
                          >
                             21:00H 
                          </option>
                          <option
                            value="22: Object"
                          >
                             22:00H 
                          </option>
                          <option
                            value="23: Object"
                          >
                             23:00H 
                          </option>
                          <option
                            value="0: Object"
                          >
                            23:59H
                          </option>
                        </select>
                      </tm-timepicker>
                    </div>
                  </div>
                </div>
                <div
                  class="col-md-6 border-left-gray"
                >
                  <div
                    class="row text-center"
                  >
                    <div
                      class="col-12 text-md-left ml-md-2"
                    >
                      <label
                        class="ngb-tooltip-class label-control font-weight-bold"
                        ngbtooltip="Notification will be hidden from users."
                      >
                         Notification end time 
                      </label>
                    </div>
                  </div>
                  <div
                    class="row align-items-center"
                  >
                    <div
                      class="col-md-7 col-xs-center"
                      id="notification-end-date"
                    >
                      <tm-datepicker>
                        <div
                          class="input-group"
                        >
                          <input
                            class="form-control ng-untouched ng-pristine ng-valid"
                            ngbdatepicker=""
                            type="text"
                          />
                          <div
                            class="input-group-append"
                          >
                            <button
                              class="btn btn-light"
                              type="button"
                            >
                              <i
                                class="fas fa-calendar-alt"
                              />
                            </button>
                          </div>
                        </div>
                      </tm-datepicker>
                    </div>
                    <div
                      class="col-md-5"
                    >
                      <tm-timepicker
                        id="notification-end-time"
                      >
                        <select
                          class="form-control ng-untouched ng-pristine ng-valid"
                        >
                          <option
                            value="1: Object"
                          >
                             01:00H 
                          </option>
                          <option
                            value="2: Object"
                          >
                             02:00H 
                          </option>
                          <option
                            value="3: Object"
                          >
                             03:00H 
                          </option>
                          <option
                            value="4: Object"
                          >
                             04:00H 
                          </option>
                          <option
                            value="5: Object"
                          >
                             05:00H 
                          </option>
                          <option
                            value="6: Object"
                          >
                             06:00H 
                          </option>
                          <option
                            value="7: Object"
                          >
                             07:00H 
                          </option>
                          <option
                            value="8: Object"
                          >
                             08:00H 
                          </option>
                          <option
                            value="9: Object"
                          >
                             09:00H 
                          </option>
                          <option
                            value="10: Object"
                          >
                             10:00H 
                          </option>
                          <option
                            value="11: Object"
                          >
                             11:00H 
                          </option>
                          <option
                            value="12: Object"
                          >
                             12:00H 
                          </option>
                          <option
                            value="13: Object"
                          >
                             13:00H 
                          </option>
                          <option
                            value="14: Object"
                          >
                             14:00H 
                          </option>
                          <option
                            value="15: Object"
                          >
                             15:00H 
                          </option>
                          <option
                            value="16: Object"
                          >
                             16:00H 
                          </option>
                          <option
                            value="17: Object"
                          >
                             17:00H 
                          </option>
                          <option
                            value="18: Object"
                          >
                             18:00H 
                          </option>
                          <option
                            value="19: Object"
                          >
                             19:00H 
                          </option>
                          <option
                            value="20: Object"
                          >
                             20:00H 
                          </option>
                          <option
                            value="21: Object"
                          >
                             21:00H 
                          </option>
                          <option
                            value="22: Object"
                          >
                             22:00H 
                          </option>
                          <option
                            value="23: Object"
                          >
                             23:00H 
                          </option>
                          <option
                            value="0: Object"
                          >
                            23:59H
                          </option>
                        </select>
                      </tm-timepicker>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="row margin-top-20px"
          >
            <div
              class="col-12 text-center"
            >
              <span
                class="loader"
              />
              <div>
                <button
                  class="btn btn-success"
                  type="button"
                >
                  Save Changes 
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </tm-notification-edit-form>
  </div><tm-loading-retry>
    <div
      class="margin-top-30px"
    >
      <div>
        <tm-notifications-table>
          <div
            class="row"
          >
            <div
              class="col-12"
            >
              <table
                class="table table-responsive-lg table-striped table-bordered margin-bottom-0"
                id="notifications-table"
              >
                <thead>
                  <tr
                    class="bg-primary text-white"
                  >
                    <th
                      class="sortable-header"
                    >
                       Title 
                      <span
                        class="fa-stack"
                      >
                        <i
                          class="fas fa-sort"
                        />
                      </span>
                    </th>
                    <th
                      class="sortable-header"
                    >
                       Start Time 
                      <span
                        class="fa-stack"
                      >
                        <i
                          class="fas fa-sort"
                        />
                      </span>
                    </th>
                    <th
                      class="sortable-header"
                    >
                       End Time 
                      <span
                        class="fa-stack"
                      >
                        <i
                          class="fas fa-sort"
                        />
                      </span>
                    </th>
                    <th
                      class="sortable-header"
                    >
                       Target User 
                      <span
                        class="fa-stack"
                      >
                        <i
                          class="fas fa-sort"
                        />
                      </span>
                    </th>
                    <th
                      class="sortable-header"
                    >
                       Style 
                      <span
                        class="fa-stack"
                      >
                        <i
                          class="fas fa-sort"
                        />
                      </span>
                    </th>
                    <th
                      class="sortable-header"
                    >
                       Creation Time 
                      <span
                        class="fa-stack"
                      >
                        <i
                          class="fas fa-sort"
                        />
                        <i
                          class="fas fa-sort-down"
                        />
                      </span>
                    </th>
                    <th>
                      Actions
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      class="text-break"
                    >
                      valid title 1
                    </td>
                    <td
                      class="text-break"
                    >
                      <span
                        class="ngb-tooltip-class"
                      >
                        15 Sep 9:30 AM
                      </span>
                    </td>
                    <td
                      class="text-break"
                    >
                      <span
                        class="ngb-tooltip-class"
                      >
                        15 Sep 9:30 AM
                      </span>
                    </td>
                    <td
                      class="text-break"
                    >
                      INSTRUCTOR
                    </td>
                    <td
                      class="text-break bg-success text-white"
                    >
                      Success (green)
                    </td>
                    <td
                      class="text-break"
                    >
                      <span
                        class="ngb-tooltip-class"
                      >
                        15 Sep 9:30 AM
                      </span>
                    </td>
                    <td
                      class="actions-cell"
                    >
                      <div
                        class="d-flex"
                      >
                        <button
                          class="btn btn-light btn-sm"
                          type="button"
                        >
                           Edit 
                        </button>
                        <button
                          class="btn btn-danger btn-sm"
                          type="button"
                        >
                           Delete 
                        </button>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </tm-notifications-table>
      </div>
    </div>
    <br />
  </tm-loading-retry>
</tm-admin-notifications-page>
`;

exports[`AdminNotificationsPageComponent should snap when notifications are loading 1`] = `
<tm-admin-notifications-page
  NotificationEditFormMode={[Function Object]}
  currentNotificationEditFormMode="0"
  hasNotificationLoadingFailed="false"
  isNotificationEditFormExpanded="false"
  isNotificationLoading={[Function Boolean]}
  notificationEditFormModel={[Function Object]}
  notificationService={[Function NotificationService]}
  notificationsTableRowModels={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Notifications
  </h1><p>
    This page allows you to create and manage notifications which are shown to respective target users when they access TEAMMATES.
  </p><div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-notification"
    >
      <span>
        <i
          class="fas fa-plus"
        />
         Add New Notification
      </span>
    </button>
  </div><tm-loading-retry>
    <div
      class="margin-top-30px"
    >
      <tm-loading-spinner>
        <div
          class="loading-container"
        >
          <div
            class="row spinner-border text-primary"
            role="status"
          />
          <div
            class="row text-secondary"
          >
            Loading...
          </div>
        </div>
      </tm-loading-spinner>
    </div>
    <br />
  </tm-loading-retry>
</tm-admin-notifications-page>
`;

exports[`AdminNotificationsPageComponent should snap when notifications failed to load 1`] = `
<tm-admin-notifications-page
  NotificationEditFormMode={[Function Object]}
  currentNotificationEditFormMode="0"
  hasNotificationLoadingFailed={[Function Boolean]}
  isNotificationEditFormExpanded="false"
  isNotificationLoading={[Function Boolean]}
  notificationEditFormModel={[Function Object]}
  notificationService={[Function NotificationService]}
  notificationsTableRowModels={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Notifications
  </h1><p>
    This page allows you to create and manage notifications which are shown to respective target users when they access TEAMMATES.
  </p><div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-notification"
    >
      <span>
        <i
          class="fas fa-plus"
        />
         Add New Notification
      </span>
    </button>
  </div><tm-loading-retry>
    <div
      class="text-center"
    >
      <p
        class="text-muted m-1"
      >
        Failed to load data
      </p>
      <button
        class="btn btn-primary"
      >
        <i
          aria-hidden="true"
          class="fas fa-redo"
        />
         Retry
      </button>
    </div>
  </tm-loading-retry>
</tm-admin-notifications-page>
`;

exports[`AdminNotificationsPageComponent should snap with default view 1`] = `
<tm-admin-notifications-page
  NotificationEditFormMode={[Function Object]}
  currentNotificationEditFormMode="0"
  hasNotificationLoadingFailed="false"
  isNotificationEditFormExpanded="false"
  isNotificationLoading={[Function Boolean]}
  notificationEditFormModel={[Function Object]}
  notificationService={[Function NotificationService]}
  notificationsTableRowModels={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Notifications
  </h1><p>
    This page allows you to create and manage notifications which are shown to respective target users when they access TEAMMATES.
  </p><div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-notification"
    >
      <span>
        <i
          class="fas fa-plus"
        />
         Add New Notification
      </span>
    </button>
  </div><tm-loading-retry>
    <div
      class="margin-top-30px"
    >
      <tm-loading-spinner>
        <div
          class="loading-container"
        >
          <div
            class="row spinner-border text-primary"
            role="status"
          />
          <div
            class="row text-secondary"
          >
            Loading...
          </div>
        </div>
      </tm-loading-spinner>
    </div>
    <br />
  </tm-loading-retry>
</tm-admin-notifications-page>
`;
